--- a/constantine/build.gradle
+++ b/constantine/build.gradle
@@ -25,7 +25,7 @@ task makeConstantineLib(type: Exec) {
     description = 'Compiles the Constantine library'
     workingDir = file('./constantine')
     environment 'CTT_LTO', 'false'
-    commandLine 'sh', '-c', "which nimble && nimble make_lib"
+    commandLine "${System.getenv('HOME')}/.nimble/bin/nimble", 'make_lib'
 }
 
 task compileJavaSource(type: Exec) {
