--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
             echo "Query for version [$VERSION]"
             curl --head -L --silent --output /dev/null --fail "$ART_URL/$VERSION" &&  {
               echo "ERROR: Binary arithmetic already exists for version [$VERSION]"
-              echo "ERROR: Blocking publishing same version to the Besu Artiactory"
+              echo "ERROR: Blocking republishing same version to the Besu Artifactory"
               echo "url $ART_URL/$VERSION"
               exit 1
             }
