--- a/constantine/build.gradle
+++ b/constantine/build.gradle
@@ -39,32 +39,17 @@ if (osName.contains('mac') && osArch.contains('aarch64')) {
     libDir = 'linux-gnu-x86_64'
 }
 
-task macArmLibCopy(type: Copy) {
-    from "build/darwin-aarch64/lib/libconstantine.jnilib"
-    into 'build/resources/main/lib/darwin-aarch64'
+task libCopy(type: Copy) {
+    from "build/${libDir}/lib/"
+    into "build/resources/main/lib/${libDir}"
 }
 
-task macLibCopy(type: Copy) {
-    from "build/darwin-x86-64/lib/libconstantine.jnilib"
-    into 'build/resources/main/lib/darwin-x86-64'
-}
-
-task linuxLibCopy(type: Copy) {
-    from "build/linux-gnu-x86_64/lib/libconstantine.so"
-    into 'build/resources/main/lib/linux-gnu-x86_64'
-}
-
-task linuxArm64LibCopy(type: Copy) {
-    from "build/linux-gnu-aarch64/lib/libconstantine.so"
-    into 'build/resources/main/lib/linux-gnu-aarch64'
-}
-
-processResources.dependsOn macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
+processResources.dependsOn libCopy
 
 task compileJavaSource(type: Exec) {
     description = 'Compiles the Java source files'
     commandLine 'javac', '-d', 'build', 'src/main/java/org/hyperledger/besu/nativelib/constantine/LibConstantineEIP196.java'
-    dependsOn linuxLibCopy, linuxArm64LibCopy, macLibCopy, macArmLibCopy
+    dependsOn libCopy
 }
 
 tasks.named('test', Test) {
@@ -72,6 +57,7 @@ tasks.named('test', Test) {
     useJUnit {
         include '**/*Test.class'
     }
+    environment 'LD_LIBRARY_PATH', "${System.env.LD_LIBRARY_PATH}:build/resources/main/lib/${libDir}"
     jvmArgs = ["-Djava.library.path=build/resources/main/lib/${libDir}"]
     dependsOn compileJavaSource
 }
