--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ Cargo.lock
 
 .gradle
 
+*.DS_Store
+
 ## build files
 *.com
 *.class
@@ -17,3 +19,7 @@ Cargo.lock
 *.exe
 *.o
 *.so
+
+*.a
+*.dylib
+constantine/out
