--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -349,6 +349,10 @@ jobs:
         with:
           name: jars
           path: gnark/build/libs
+      - uses: actions/upload-artifact@v3.1.0
+        with:
+          name: jars
+          path: constantine/build/libs
       - name: gradle publish
         uses: gradle/gradle-build-action@v2
         if: contains('refs/heads/release-', github.ref) || github.ref == 'refs/heads/main'
