--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,8 +81,7 @@ jobs:
           mkdir -p ~/.nimble
           wget https://github.com/nim-lang/nightlies/releases/download/2024-01-04-version-2-0-0acdce502ca39441bb7e4050efdf43bf03db075d/nim-2.0.3-linux_arm64.tar.xz
           tar -xf nim-2.0.3-linux_arm64.tar.xz
-          mv nim-2.0.3/* ~/.nimble/
-          export PATH=$HOME/.nimble/bin:$PATH
+          mv nim-2.0.3/* /home/ubuntu/nimble/
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
