--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,6 +123,8 @@ jobs:
           brew install autoconf automake libtool
           # gnark dependencies
           brew install go@1.22 || true
+          export GOROOT=$(brew --prefix go@1.22)/libexec
+          export PATH=$GOROOT/bin:$PATH
           # rust dependencies
           export CARGO_HOME="$HOME/.cargo"
           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
