add linx-arm lib upload action
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,6 +111,10 @@ jobs:
         with:
           name: gnark native build artifacts
           path: gnark/build/
+      - uses: actions/upload-artifact@v3.1.0
+        with:
+          name: constantine native build artifacts
+          path: constantine/build/
 
   native-build-macos:
     runs-on: macos-13
