--- a/constantine/build.gradle
+++ b/constantine/build.gradle
@@ -48,14 +48,9 @@ task linuxArm64LibCopy(type: Copy) {
 
 processResources.dependsOn macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
 
-tasks.named('test', Test) {
-    description = 'Runs the Java tests'
-    useJUnit {
-        include '**/*Test.class'
-    }
-    environment 'LD_LIBRARY_PATH', "${System.env.LD_LIBRARY_PATH}:build/resources/main/linux-gnu-x86_64"
-
-    dependsOn macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
+test {
+    //TODO: why is this necessary on x86_64?
+    systemProperty 'jna.library.path', file('build/resources/main/linux-gnu-x86_64').absolutePath
 }
 
 jar {
