--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -365,6 +365,9 @@ jobs:
         uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: --no-daemon --parallel build --scan
+      - name: Dump info on constantine libs
+        run: |
+          find . -name 'libconstantine*' |xargs -r file
       - uses: actions/upload-artifact@v3.1.0
         with:
           name: jars
