--- a/constantine/build.gradle
+++ b/constantine/build.gradle
@@ -48,10 +48,16 @@ task linuxArm64LibCopy(type: Copy) {
 
 processResources.dependsOn macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
 
+task printClasspath {
+    doLast {
+        println "Test classpath:"
+        tasks.test.classpath.each { println it }
+    }
+}
 test {
     environment 'LD_LIBRARY_PATH', "${System.env.LD_LIBRARY_PATH}:build/resources/main/linux-gnu-x86_64"
     systemProperty 'jna.library.path', file('build/resources/main/linux-gnu-x86_64').absolutePath
-    dependsOn macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
+    dependsOn printClasspath, macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
 }
 
 jar {
