move to v4 github actions for upload/download.  address the problem of needing separate artifact names for each
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,33 +73,33 @@ jobs:
           ART_URL: 'https://hyperledger.jfrog.io/artifactory/besu-maven/org/hyperledger/besu/arithmetic'
       - name: Build
         run: ./build.sh
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: arithmetic native build artifacts
+          name: arithmetic-native-build-artifacts-linux-x86-64
           path: arithmetic/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: blake2bf native build artifacts
+          name: blake2bf-native-build-artifacts-linux-x86-64
           path: blake2bf/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256k1 native build artifacts
+          name: secp256k1-native-build-artifacts-linux-x86-64
           path: secp256k1/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256r1 native build artifacts
+          name: secp256r1-native-build-artifacts-linux-x86-64
           path: secp256r1/besu-native-ec/release/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: ipa-multipoint native build artifacts
+          name: ipa-multipoint-native-build-artifacts-linux-x86-64
           path: ipa-multipoint/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: gnark native build artifacts
+          name: gnark-native-build-artifacts-linux-x86-64
           path: gnark/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: constantine native build artifacts
+          name: constantine-native-build-artifacts-linux-x86-64
           path: constantine/build/
 
   native-build-linux-arm64:
@@ -114,33 +114,33 @@ jobs:
       - name: Build
         run: |
           docker run -e SKIP_GRADLE=$SKIP_GRADLE -v $(pwd):/home/ubuntu ubuntu:20.04 /home/ubuntu/native-build.sh
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: arithmetic native build artifacts
+          name: arithmetic-native-build-artifacts-linux-arm64
           path: arithmetic/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: blake2bf native build artifacts
+          name: blake2bf-native-build-artifacts-linux-arm64
           path: blake2bf/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256k1 native build artifacts
+          name: secp256k1-native-build-artifacts-linux-arm64
           path: secp256k1/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256r1 native build artifacts
+          name: secp256r1-native-build-artifacts-linux-arm64
           path: secp256r1/besu-native-ec/release/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: ipa-multipoint native build artifacts
+          name: ipa-multipoint-native-build-artifacts-linux-arm64
           path: ipa-multipoint/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: gnark native build artifacts
+          name: gnark-native-build-artifacts-linux-arm64
           path: gnark/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: constantine native build artifacts
+          name: constantine-native-build-artifacts-linux-arm64
           path: constantine/build/
 
   native-build-macos:
@@ -171,33 +171,33 @@ jobs:
           submodules: recursive
       - name: Build
         run: ./build.sh
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: arithmetic native build artifacts
+          name: arithmetic-native-build-artifacts-macos-x86-64
           path: arithmetic/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: blake2bf native build artifacts
+          name: blake2bf-native-build-artifacts-macos-x86-64
           path: blake2bf/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256k1 native build artifacts
+          name: secp256k1-native-build-artifacts-macos-x86-64
           path: secp256k1/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256r1 native build artifacts
+          name: secp256r1-native-build-artifacts-macos-x86-64
           path: secp256r1/besu-native-ec/release/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: ipa-multipoint native build artifacts
+          name: ipa-multipoint-native-build-artifacts-macos-x86-64
           path: ipa-multipoint/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: gnark native build artifacts
+          name: gnark-native-build-artifacts-macos-x86-64
           path: gnark/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: constantine native build artifacts
+          name: constantine-native-build-artifacts-macos-x86-64
           path: constantine/build/
 
   native-build-m1:
@@ -251,33 +251,33 @@ jobs:
           export HOMEBREW_BIN=${{ env.HOMEBREW_BIN }}
           export PATH=$HOMEBREW_BIN:$PATH
           ./build.sh
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: arithmetic native build artifacts
+          name: arithmetic-native-build-artifacts-macos-arm64
           path: arithmetic/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: blake2bf native build artifacts
+          name: blake2bf-native-build-artifacts-macos-arm64
           path: blake2bf/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256k1 native build artifacts
+          name: secp256k1-native-build-artifacts-macos-arm64
           path: secp256k1/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: secp256r1 native build artifacts
+          name: secp256r1-native-build-artifacts-macos-arm64
           path: secp256r1/besu-native-ec/release/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: ipa-multipoint native build artifacts
+          name: ipa-multipoint-native-build-artifacts-macos-arm64
           path: ipa-multipoint/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: gnark native build artifacts
+          name: gnark-native-build-artifacts-macos-arm64
           path: gnark/build/
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
-          name: constantine native build artifacts
+          name: constantine-native-build-artifacts-macos-arm64
           path: constantine/build/
 
   final-assembly:
@@ -291,39 +291,144 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
       - name: Download arithmetic
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: arithmetic native build artifacts
+          name: arithmetic-native-build-artifacts-linux-x86-64
+          path: arithmetic/build/
+      - name: Download arithmetic
+        uses: actions/download-artifact@v4
+        with:
+          name: arithmetic-native-build-artifacts-linux-arm64
+          path: arithmetic/build/
+      - name: Download arithmetic
+        uses: actions/download-artifact@v4
+        with:
+          name: arithmetic-native-build-artifacts-macos-x86-64
+          path: arithmetic/build/
+      - name: Download arithmetic
+        uses: actions/download-artifact@v4
+        with:
+          name: arithmetic-native-build-artifacts-macos-arm64
           path: arithmetic/build/
       - name: Download blake2bf
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: blake2bf native build artifacts
+          name: blake2bf-native-build-artifacts-linux-x86-64
+          path: blake2bf/build/
+      - name: Download blake2bf
+        uses: actions/download-artifact@v4
+        with:
+          name: blake2bf-native-build-artifacts-linux-arm64
+          path: blake2bf/build/
+      - name: Download blake2bf
+        uses: actions/download-artifact@v4
+        with:
+          name: blake2bf-native-build-artifacts-macos-x86-64
+          path: blake2bf/build/
+      - name: Download blake2bf
+        uses: actions/download-artifact@v4
+        with:
+          name: blake2bf-native-build-artifacts-macos-arm64
           path: blake2bf/build/
       - name: Download secp256k1
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: secp256k1 native build artifacts
+          name: secp256k1-native-build-artifacts-linux-x86-64
+          path: secp256k1/build/
+      - name: Download secp256k1
+        uses: actions/download-artifact@v4
+        with:
+          name: secp256k1-native-build-artifacts-linux-arm64
+          path: secp256k1/build/
+      - name: Download secp256k1
+        uses: actions/download-artifact@v4
+        with:
+          name: secp256k1-native-build-artifacts-macos-x86-64
+          path: secp256k1/build/
+      - name: Download secp256k1
+        uses: actions/download-artifact@v4
+        with:
+          name: secp256k1-native-build-artifacts-macos-arm64
           path: secp256k1/build/
       - name: Download secp256r1
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: secp256r1 native build artifacts
+          name: secp256r1-native-build-artifacts-linux-x86-64
+          path: secp256r1/besu-native-ec/release/
+      - name: Download secp256r1
+        uses: actions/download-artifact@v4
+        with:
+          name: secp256r1-native-build-artifacts-linux-arm64
+          path: secp256r1/besu-native-ec/release/
+      - name: Download secp256r1
+        uses: actions/download-artifact@v4
+        with:
+          name: secp256r1-native-build-artifacts-macos-x86-64
+          path: secp256r1/besu-native-ec/release/
+      - name: Download secp256r1
+        uses: actions/download-artifact@v4
+        with:
+          name: secp256r1-native-build-artifacts-macos-arm64
           path: secp256r1/besu-native-ec/release/
       - name: Download ipa-multipoint
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: ipa-multipoint native build artifacts
+          name: ipa-multipoint-native-build-artifacts-linux-x86-64
+          path: ipa-multipoint/build/
+      - name: Download ipa-multipoint
+        uses: actions/download-artifact@v4
+        with:
+          name: ipa-multipoint-native-build-artifacts-linux-arm64
+          path: ipa-multipoint/build/
+      - name: Download ipa-multipoint
+        uses: actions/download-artifact@v4
+        with:
+          name: ipa-multipoint-native-build-artifacts-macos-x86-64
+          path: ipa-multipoint/build/
+      - name: Download ipa-multipoint
+        uses: actions/download-artifact@v4
+        with:
+          name: ipa-multipoint-native-build-artifacts-macos-arm64
           path: ipa-multipoint/build/
       - name: Download gnark
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: gnark native build artifacts
+          name: gnark -ative-build-artifacts-linux-x86-64
+          path: gnark/build/
+      - name: Download gnark
+        uses: actions/download-artifact@v4
+        with:
+          name: gnark -ative-build-artifacts-linux-arm64
+          path: gnark/build/
+      - name: Download gnark
+        uses: actions/download-artifact@v4
+        with:
+          name: gnark -ative-build-artifacts-macos-x86-64
+          path: gnark/build/
+      - name: Download gnark
+        uses: actions/download-artifact@v4
+        with:
+          name: gnark -ative-build-artifacts-macos-arm64
           path: gnark/build/
       - name: Download constantine
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: constantine native build artifacts
+          name: constantine-native-build-artifacts-linux-x86-64
+          path: constantine/build/
+      - name: Download constantine
+        uses: actions/download-artifact@v4
+        with:
+          name: constantine-native-build-artifacts-linux-arm64
+          path: constantine/build/
+      - name: Download constantine
+        uses: actions/download-artifact@v4
+        with:
+          name: constantine-native-build-artifacts-macos-x86-64
+          path: constantine/build/
+      - name: Download constantine
+        uses: actions/download-artifact@v4
+        with:
+          name: constantine-native-build-artifacts-macos-arm64
           path: constantine/build/
       - name: Set up Java
         uses: actions/setup-java@v4
@@ -335,31 +440,31 @@ jobs:
         uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: --no-daemon --parallel build --scan
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: arithmetic/build/libs
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: blake2bf/build/libs
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: secp256k1/build/libs
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: secp256r1/build/libs
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: ipa-multipoint/build/libs
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: gnark/build/libs
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: actions/upload-artifact@v4.4
         with:
           name: jars
           path: constantine/build/libs
