--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,10 +118,11 @@ jobs:
         with:
           name: arithmetic-native-build-artifacts-linux-arm64
           path: arithmetic/build/
-      - uses: actions/upload-artifact@v4
-        with:
-          name: blake2bf-native-build-artifacts-linux-arm64
-          path: blake2bf/build/
+#  blake2bf is not built for linux-arm64
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: blake2bf-native-build-artifacts-linux-arm64
+#          path: blake2bf/build/
       - uses: actions/upload-artifact@v4
         with:
           name: secp256k1-native-build-artifacts-linux-arm64
@@ -255,10 +256,11 @@ jobs:
         with:
           name: arithmetic-native-build-artifacts-macos-arm64
           path: arithmetic/build/
-      - uses: actions/upload-artifact@v4
-        with:
-          name: blake2bf-native-build-artifacts-macos-arm64
-          path: blake2bf/build/
+#  blake2bf is not built for macos-arm64
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: blake2bf-native-build-artifacts-macos-arm64
+#          path: blake2bf/build/
       - uses: actions/upload-artifact@v4
         with:
           name: secp256k1-native-build-artifacts-macos-arm64
@@ -315,21 +317,23 @@ jobs:
         with:
           name: blake2bf-native-build-artifacts-linux-x86-64
           path: blake2bf/build/
-      - name: Download blake2bf
-        uses: actions/download-artifact@v4
-        with:
-          name: blake2bf-native-build-artifacts-linux-arm64
-          path: blake2bf/build/
+#  blake2bf is not built for linux-arm64
+#      - name: Download blake2bf
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: blake2bf-native-build-artifacts-linux-arm64
+#          path: blake2bf/build/
       - name: Download blake2bf
         uses: actions/download-artifact@v4
         with:
           name: blake2bf-native-build-artifacts-macos-x86-64
           path: blake2bf/build/
-      - name: Download blake2bf
-        uses: actions/download-artifact@v4
-        with:
-          name: blake2bf-native-build-artifacts-macos-arm64
-          path: blake2bf/build/
+#  blake2bf is not built for macos-arm64
+#      - name: Download blake2bf
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: blake2bf-native-build-artifacts-macos-arm64
+#          path: blake2bf/build/
       - name: Download secp256k1
         uses: actions/download-artifact@v4
         with:
